test_files/netlist_format/valid/valid_06.net
A1 N008 N006 0 0 0 N004 N003 0 SRFLOP
V1 N004 0 5
V2 N003 0 5
.tran 1m
.backanno
.end
