test_files/netlist_format/invalid/invalid_08_line_2.net
V1 N001 0 5
R1 N001
.tran 1m
.backanno
.end
